--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ before_install:
   # https://github.com/danmayer/coverband/issues/162#issuecomment-452173268
   - rm /home/travis/.rvm/gems/*/specifications/bundler-2.*.gemspec || true
   - gem install bundler -v '< 2'
+  - gem update --system
 
 before_script:
   - cd spec/dummy_app
